# vibe-cli

./: CHANGELOG.md  DEB_PACKAGE.md  HOMEBREW_FORMULA.md  HOMEBREW_TAP.md  README.md  SCOOP_MANIFEST.json  setup.cfg
.github/workflows/: build-binaries.yml  ci.yml  release-binaries.yml  release.yml
vibe_security/: __main__.py  cli.py
