[metadata]
name = vibe-security
version = 1.0.0
description = Vibe Security CLI
author = SHA888
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7
install_requires =

[options.entry_points]
console_scripts =
    vibe-security = vibe_security.cli:main
